Add QML test for scrollPosition
Change-Id: Ia7541befb43d2b6fdd09b13ca51fc7d09b955964
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>

--- a/tests/auto/quick/qmltests/data/test4.html
+++ b/tests/auto/quick/qmltests/data/test4.html
@@ -12,6 +12,17 @@
         <meta name="viewport" content="initial-scale=2.0"/>
     </head>
     <body>
+        <button onclick="scrollWin()", id="scroll">Click me to scroll!</button><br><br>
+
+        <script>
+            window.onload = function() {
+                document.getElementById("scroll").focus();
+            }
+
+            function scrollWin() {
+                window.scrollTo(0, 600);
+            }
+        </script>
         <div id="content">
             bla00<br/>
             bla01<br/>
