Fix QML geolocation test
The test had a race condition and never waited for success or failure.
In addition it didn't handle the case where there is no location service
available.

Change-Id: Icac02d0cc6396f31fed83b8b77b691ba872ac2f0
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/tests/auto/quick/qmltests/data/geolocation.html
+++ b/tests/auto/quick/qmltests/data/geolocation.html
@@ -8,6 +8,7 @@ function successHandler(location) {
     message.innerHTML = "Latitude: " + location.coords.latitude +
     "<br>Longitude: " + location.coords.longitude;
 
+    console.error("Success");
 }
 
 function errorHandler(error) {
