Add test for form validation's sub validation message
Since commit 8b0d048b02c1f1cb24fdb83f11791507df246e05 there is no test
for sub validation messages. Add new test based on test case of the
following fix: https://codereview.chromium.org/1671613003

Change-Id: I73de2a6709ebaa52bfe87b81b4b6f8a1cf072de8
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/quick/qmltests/data/forms.html
+++ b/tests/auto/quick/qmltests/data/forms.html
@@ -28,5 +28,13 @@
         <input type="email" value="invalid" required/>
         <input type="submit" name="email_invalid"/>
     </form>
+    <form>
+        <input type="text" title="empty input" required/>
+        <input type="submit" name="input_empty"/>
+    </form>
+    <form>
+        <input type="text" pattern="Lorem ipsum" value="Lorem Ipsum" title="Should type 'Lorem ipsum'"/>
+        <input type="submit" name="lorem_ipsum"/>
+    </form>
 </body>
 </html>
