Add faviconbrowser quick manual test
Change-Id: I3b6353b5c58d62c968c704b20224ff8ee600a524
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/quick/qmltests/data/favicon-candidates-gray.html
+++ b/tests/auto/quick/qmltests/data/favicon-candidates-gray.html
@@ -11,11 +11,11 @@
         <h1>Gray Candidate Favicons Test</h1>
         <table style="width:100%">
             <tr>
-                <td align="center"><img src="icons/gray16.png" height="16" width="16" /></td>
-                <td align="center"><img src="icons/gray32.png" height="32" width="32" /></td>
-                <td align="center"><img src="icons/gray64.png" height="64" width="64" /></td>
-                <td align="center"><img src="icons/gray128.png" height="128" width="128" /></td>
-                <td align="center"><img src="icons/gray255.png" height="255" width="255" /></td>
+                <td align="center"><img src="icons/gray16.png" height="16" width="16" border="1" /></td>
+                <td align="center"><img src="icons/gray32.png" height="32" width="32" border="1" /></td>
+                <td align="center"><img src="icons/gray64.png" height="64" width="64" border="1" /></td>
+                <td align="center"><img src="icons/gray128.png" height="128" width="128" border="1" /></td>
+                <td align="center"><img src="icons/gray255.png" height="255" width="255" border="1" /></td>
             </tr>
             <tr>
                 <td align="center">16x16</td>
