Update tests for "Don't create undeserializable mojo origins"
Check that the workaround in src/3rdparty bf10f2f32a behaves as expected.

Task-number: QTBUG-62536
Change-Id: Ieae4ad61df303aae5c65d4f7be487574ce32eae0
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/widgets/origins/resources/dedicatedWorker.html
+++ b/tests/auto/widgets/origins/resources/dedicatedWorker.html
@@ -5,9 +5,14 @@
         <script>
          var done = false;
          var result;
-         let worker = new Worker("dedicatedWorker.js");
-         worker.onmessage = (e) => { done = true; result = e.data; };
-         worker.postMessage(41);
+         var error;
+         try {
+             let worker = new Worker("dedicatedWorker.js");
+             worker.onmessage = (e) => { done = true; result = e.data; };
+             worker.postMessage(41);
+         } catch (e) {
+             done = true; error = e.message;
+         }
         </script>
     </head>
     <body></body>
