Remove qwebchannel.js from test and example
Use qwebchannel.js shipped with qtwebchannel.

Change-Id: Iceead5131d22a6988bbb4e7a3cca1e9f21908e3e
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>
Reviewed-by: Michael Brüning <michael.bruning@qt.io>

--- a/examples/webenginewidgets/markdowneditor/resources/index.html
+++ b/examples/webenginewidgets/markdowneditor/resources/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="3rdparty/markdown.css">
   <script src="3rdparty/marked.min.js"></script>
-  <script src="qwebchannel.js"></script>
+  <script src="qrc:/qtwebchannel/qwebchannel.js"></script>
 </head>
 <body>
   <div id="placeholder"></div>
