--- a/tests/auto/widgets/qwebenginescript/resources/webChannelWithBadString.html
+++ b/tests/auto/widgets/qwebenginescript/resources/webChannelWithBadString.html
@@ -4,7 +4,7 @@
         <title>webChannelWithBadString</title>
     </head>
     <body>
-        <script src="/qwebchannel.js"></script>
+        <script src="qrc:/qtwebchannel/qwebchannel.js"></script>
         <script type="text/javascript">
          new QWebChannel(qt.webChannelTransport, (channel) => {
              channel.objects.host.text = String.fromCharCode(0xD800);
