Update 3rd party code in markdown example
Update to marked 0.3.19. Also include the un-minified
version, so that the code can be read.

[ChangeLog][Third-Party Code] Updated "Marked (WebEngine Markdown Editor
example)" to version 0.3.19.

Change-Id: Ie068d003ec6cfab27803332b4aa12095c6c8a457
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/examples/webenginewidgets/markdowneditor/resources/index.html
+++ b/examples/webenginewidgets/markdowneditor/resources/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <head>
   <link rel="stylesheet" type="text/css" href="3rdparty/markdown.css">
-  <script src="3rdparty/marked.min.js"></script>
+  <script src="3rdparty/marked.js"></script>
   <script src="qrc:/qtwebchannel/qwebchannel.js"></script>
 </head>
 <body>
