Test iframes over file scheme in tst_Origins::mixedSchemes
Add previously missing combinations of schemes to the test.

Task-number: QTBUG-62536
Change-Id: Idee99ba03ee17af056e57dd0b1ecbf1b6bc80dcd
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/widgets/origins/resources/mixed_frame.html
+++ b/tests/auto/widgets/origins/resources/mixed_frame.html
@@ -3,7 +3,8 @@
     <head>
         <title>Mixed - Frame</title>
         <script>
-         parent.msg = "mixed";
+         var canary = true;
+         parent.canary = true;
         </script>
     </head>
     <body></body>
