Add QWebEngineUrlScheme class
Public API for the new url/url_util_qt extension to Chromium, which allows to
integrate custom schemes into Chromium's url parsing library and security model.
Previously custom schemes would be treated as 'unknown' schemes and rely on
fallback behavior in Chromium.

[ChangeLog][Custom Schemes] Added the QWebEngineUrlScheme class for configuring
how custom schemes are parsed and which security restrictions should apply.

Task-number: QTBUG-62536
Change-Id: I7d8b9da3ad742f568b82ccc6a2456ad35e84069b
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/tests/auto/widgets/origins/resources/websocket.html
+++ b/tests/auto/widgets/origins/resources/websocket.html
@@ -2,10 +2,21 @@
 <html>
     <head>
         <title>WebSocket</title>
+        <script src="qrc:/qtwebchannel/qwebchannel.js"></script>
         <script>
-         var err;
-         const ws = new WebSocket("ws://example.invalid");
-         ws.addEventListener("close", () => err = event.code);
+         var result;
+         new QWebChannel(qt.webChannelTransport, channel => {
+             const ws = new WebSocket(channel.objects.echoServer.url);
+             ws.addEventListener("open", event => {
+                 ws.send("ok");
+             });
+             ws.addEventListener("message", event => {
+                 result = event.data;
+             });
+             ws.addEventListener("close", event => {
+                 result = event.code;
+             });
+         })
         </script>
     </head>
     <body></body>
