--- a/tests/auto/widgets/origins/resources/serviceWorker.html
+++ b/tests/auto/widgets/origins/resources/serviceWorker.html
@@ -5,9 +5,13 @@
         <script>
          var done = false;
          var error;
-         navigator.serviceWorker.register("serviceWorker.js")
-         .then((r) => { done = true; })
-         .catch((e) => { done = true; error = e.message; });
+         try {
+             navigator.serviceWorker.register("serviceWorker.js")
+             .then((r) => { done = true; })
+             .catch((e) => { done = true; error = e.message; });
+         } catch (e) {
+             done = true; error = e.message;
+         }
         </script>
     </head>
     <body></body>
