Update marked.js in examples
Update marked.js in examples to version 0.4.0. Also use the non-minified
version; this is required by some downstream users like Debian.

Task-number: QTBUG-69273
Change-Id: Ic4fffc2db0a457e54595cd846efee305b97b2238
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>

--- a/examples/webengine/recipebrowser/resources/pages/burger.html
+++ b/examples/webengine/recipebrowser/resources/pages/burger.html
@@ -67,7 +67,7 @@ give it a minute to go gorgeous and sloppy.
 
   </div><!--End of content-->
 
-  <script src="assets/3rdparty/marked.min.js"></script>
+  <script src="assets/3rdparty/marked.js"></script>
   <script src="assets/custom.js"></script>
 </body>
 </html>
