--- a/examples/webengine/recipebrowser/resources/pages/cupcakes.html
+++ b/examples/webengine/recipebrowser/resources/pages/cupcakes.html
@@ -45,7 +45,7 @@ Cupcakes
 **Enjoy!**
 
   </div><!--End of content-->
-  <script src="assets/3rdparty/marked.min.js"></script>
+  <script src="assets/3rdparty/marked.js"></script>
   <script src="assets/custom.js"></script>
 </body>
 </html>
