--- a/examples/webengine/recipebrowser/resources/pages/pizza.html
+++ b/examples/webengine/recipebrowser/resources/pages/pizza.html
@@ -39,7 +39,7 @@ Pizza Diavola
 **Enjoy!**
 
   </div><!--End of content-->
-  <script src="assets/3rdparty/marked.min.js"></script>
+  <script src="assets/3rdparty/marked.js"></script>
   <script src="assets/custom.js"></script>
 </body>
 </html>
