--- a/examples/webengine/recipebrowser/resources/pages/steak.html
+++ b/examples/webengine/recipebrowser/resources/pages/steak.html
@@ -59,7 +59,7 @@ Grilled steak and rice
 
   </div><!--End of content-->
 
-  <script src="assets/3rdparty/marked.min.js"></script>
+  <script src="assets/3rdparty/marked.js"></script>
   <script src="assets/custom.js"></script>
 </body>
 </html>
