--- a/examples/webengine/recipebrowser/resources/pages/pasta.html
+++ b/examples/webengine/recipebrowser/resources/pages/pasta.html
@@ -48,7 +48,7 @@ Pasta
 **Enjoy!**
 
   </div><!--End of content-->
-  <script src="assets/3rdparty/marked.min.js"></script>
+  <script src="assets/3rdparty/marked.js"></script>
   <script src="assets/custom.js"></script>
 </body>
 </html>
