--- a/examples/webengine/recipebrowser/resources/pages/soup.html
+++ b/examples/webengine/recipebrowser/resources/pages/soup.html
@@ -33,7 +33,7 @@ Soup
 **Enjoy!**
 
   </div><!--End of content-->
-  <script src="assets/3rdparty/marked.min.js"></script>
+  <script src="assets/3rdparty/marked.js"></script>
   <script src="assets/custom.js"></script>
 </body>
 </html>
