Notification API cleanup: direction type, parameter and method names
Change-Id: I0349f3eea0028a4df917af8599c073227e0d0ec1
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/shared/data/notification.html
+++ b/tests/auto/shared/data/notification.html
@@ -8,7 +8,7 @@
     function getPermission() { return document.Notification }
 
     function sendNotification(title, body) {
-        let notification = new Notification(title, { body: body })
+        let notification = new Notification(title, { body: body, dir: 'rtl', lang: 'de', tag: 'tst' })
         notification.onclick = function() { console.info('onclick') }
         notification.onclose = function() { console.info('onclose') }
         notification.onerror = function(error) { console.info('onerror: ' + error) }
