Fix qmltests::WebEngineViewSingleFileUpload auto tests
Add scheme checks for FilePickerController::accepted().
A file:// prefix to a file selected here causes chromium to terminate
the render process due to an illegal ipc message.

Extend auto tests with custom Dialog.

Also fix directory upload test.

Change-Id: I8d672e435129d62d268b48c3471b924c0161b44b
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/quick/qmltests/data/singlefileupload.html
+++ b/tests/auto/quick/qmltests/data/singlefileupload.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> Single File Upload </title>
+<title> Failed to Upload </title>
 <script src = "./titleupdate.js">
 </script>
 </head>
