Replace FaviconManager with Chromium's Favicon Component
Task-number: QTBUG-51184
Change-Id: Ie050cb23f2c86841a66ec384bfbcdf0713cffa7c
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/widgets/favicon/resources/favicon-misc.html
+++ b/tests/auto/widgets/favicon/resources/favicon-misc.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>Favicon Test</title>
-        <link rel="shortcut icon" href="icons/qt32.ico" />
-        <link rel="apple-touch-icon" href="icons/qt144.png" />
+        <link rel="shortcut icon" href="icons/qt32.ico" sizes="32x32" />
+        <link rel="apple-touch-icon" href="icons/qt144.png" sizes="144x144" />
         <link rel="shortcut icon" href="icons/unavailable.ico" />
     </head>
     <body>
