Add onTouchSelectionMenuRequested QML handler
Task-number: QTBUG-85043
Change-Id: Iecd2f5ae20fcf031937a1d44cc154f2e2a3ff52f
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/examples/webenginequick/customdialogs/index.html
+++ b/examples/webenginequick/customdialogs/index.html
@@ -14,6 +14,9 @@
                  <td><div class="div"><p title="I am a tooltip.">Hover this text to display a tooltip</a></div></td>
              </tr>
              <tr>
+                <td><div class="div"><p>Touch devices only: long press on this text to see the touch selection menu</p></div></td>
+             </tr>
+             <tr>
                  <td><button class="button" onclick="window.location = 'http://localhost.:5555/OPEN_AUTH'">
                  Open Authentication Dialog</button></td>
              </tr>
