--- a/tests/auto/core/origins/resources/mixedSchemes_frame.html
+++ b/tests/auto/core/origins/resources/mixedSchemes_frame.html
@@ -3,6 +3,7 @@
     <head>
         <title>Mixed - Frame</title>
         <script>
+         console.log('Frame Loaded');
          var canary = true;
          parent.canary = true;
         </script>
