Add testing of redirect by interceptor
Looks the same in the interceptor, but different in the jobs.

Extra combinations not yet tested.

Change-Id: Ib9c34029e5dd293d30380ce42495905fbcab12b7
Reviewed-by: Kirill Burtsev <kirill.burtsev@qt.io>

--- a/tests/auto/core/origins/resources/redirect.html
+++ b/tests/auto/core/origins/resources/redirect.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>redirect</title>
-        <link rel="stylesheet" href="redirect1:/resources/redirect.css">
+        <link rel="stylesheet" href="redirect:redirect-secure/resources/redirect.css">
     </head>
     <body>
         Text
